2008-06-07  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* data/images/Makefile.am: Update GTK+ icon cache on uninstall.  Fixes
	  bug #536740, patch courtesy of Andrew Starr-Bochicchio.

2008-05-19  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: De-sensitize categoryComboBox during task window
	  load.  Fixes bug #532764, patch courtesy of Steve Brown.

2008-05-17  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* RtmNet/Rtm.cs: Prevent crash when requests timeout during network
	  failure.  Fixes bug #533609, patch courtesy of Charles Schaefer.

2008-05-17  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Backends/Rtm/RtmBackend.cs: Checking if the refresh Thread is
	  still alive and, if it isn't, create a new Thread to be used. 
	  Prevents crash when switching away from and then back to RTM
	  backend.  Fixes bug #533607, patch courtesy of Charles Schaefer.

2008-05-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Rename QuitMainLoop to Quit, have it call the
	  OnQuit handler used in the StatusIcon menu.
	* src/TaskWindow.cs: Bind ctrl+q to Application.Quit.

2008-05-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Tasque.exe.config, src/Tasque.exe.config.in, src/Makefile.am: Fix
	  `make distcheck` by adding Tasque.exe.config.in, modeled after
	  Tomboy setup.

2008-05-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* tasque.mdp: F5 == make run

	Patch courtesy of Eric Butler  <eric@extremeboredom.net>:

	* src/Application.cs: Use Gtk.StatusIcon instead of Egg.TrayIcon.
	* src/Backends/Rtm/RtmPreferencesWidget.cs, configure.ac: Require
	  gtk-sharp >= 2.10.
	* src/Makefile.am, src/TrayLib.cs: Remove unused file.

2008-05-12  Brian Merrell <bgmerrell@gmail.com>

	* src/PreferencesDialog.cs:  Removed some of my old, commented out
	code.
	* src/TaskWindow.cs:  Organize the status bar messages when syncing
	with a backend.  They should make more sense now.
